# steward

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bridge.Dockerfile  ros1-setup.bash  rosbridge_test.html  sim.launch.py
config/: ekf.param.yaml  nav2-nofollow.param.yaml  nav2.param.yaml  sam_bot.urdf.xacro  steward.urdf  steward.urdf.xacro  warthog.urdf  warthog.urdf.xacro
data/: PLANTING_LOCATIONS.md
data/maps/demoland/: bounds.npy  map.pgm  map.yaml
data/maps/demoland-1km2/: info.yaml
data/maps/flagstaff/: info.yaml  map.pgm  map.yaml
data/pickles/: fixes.pkl  imu.pkl  twists.pkl  wheels.pkl
docs/: README.md  _config.yml  index.md
docs/_includes/: mathjax.html
docs/_layouts/: mathjax.html
docs/_sass/color_schemes/: arbor.scss
docs/actuation/: index.md
docs/control/: index.md
docs/health/: overview.md
docs/interfaces/: overview.md
docs/mapping/: map-loader.md
docs/misc/: adding-docs.md  code-style.md  coordinate-frames.md  problems-and-solutions.md
docs/perception/: overview.md
docs/planning/: forest-plan-generator.md  forest-planner.md  index.md  nav2.md  route-generator.md  waypoint-following.md
docs/sensing/: overview.md
launch/: ekf.launch.py  ekf_launch.py  sim.launch.py  teleop.launch.py
scripts/: compile_protobuf_messages.bash  tif-convert.py
src/behavior/: package.xml  setup.py
src/behavior/behavior/: behavior_fsm.py  behavior_fsm_node.py
src/control/motion_control/: package.xml  setup.py
src/control/motion_control/motion_control/: mvp_controller.py
src/ekf/: ekf_config.yaml
src/interfaces/diagnostics/: package.xml  setup.py
src/interfaces/diagnostics/diagnostics/: monitor.py
src/interfaces/gnss_interface/: package.xml  setup.cfg  setup.py
src/interfaces/gnss_interface/gnss_interface/: interface.py  sbp_sample.py
src/interfaces/planting_interface/: package.xml  setup.cfg  setup.py
src/interfaces/planting_interface/planting_interface/: interface.py
src/interfaces/sim_bridge/: package.xml  setup.py
src/interfaces/sim_bridge/sim_bridge/: bridge.py  test_client.py
src/interfaces/sim_bridge/sim_bridge/protos/proto/sensor_msgs/: Image_pb2.py
src/interfaces/sim_bridge/sim_bridge/protos/sensor_msgs/: Image_pb2.pyi
src/interfaces/sim_bridge/sim_bridge/protos/std_msgs/: helloworld_pb2_grpc.py
src/interfaces/web_bridge/: package.xml  setup.cfg  setup.py
src/interfaces/web_bridge/web_bridge/: bridge.py  sim_bridge.py  warthog_bridge.py
src/interfaces/web_bridge/web_bridge/protos/proto/sensor_msgs/: Image_pb2.py
src/interfaces/web_bridge/web_bridge/protos/sensor_msgs/: Image_pb2.py  Image_pb2.pyi  Image_pb2_grpc.py
src/interfaces/web_bridge/web_bridge/protos/std_msgs/: helloworld_pb2.py  helloworld_pb2_grpc.py
src/interfaces/zed-ros2-wrapper/: .gitlab-ci.yml  CHANGELOG.rst  CONTRIBUTING.md  README.md
src/interfaces/zed-ros2-wrapper/.ci/: build_humble_bin.sh  jetson_build_humble_src.sh  jetson_download_and_install_sdk.sh  run_build_in_humble.sh
src/interfaces/zed-ros2-wrapper/docker/: Dockerfile.l4t-humble  README.md  desktop_build_dockerfile_from_sdk_ubuntu_and_cuda_version.sh  jetson_build_dockerfile_from_sdk_and_l4T_version.sh  ros_entrypoint.sh  ros_entrypoint_jetson.sh
src/interfaces/zed-ros2-wrapper/zed_components/: CMakeLists.txt  package.xml
src/mapping/: package.xml  setup.py
src/mapping/mapping/: heightmap_publisher.py  manager.py  map_loader.py
src/misc/diagnostics/: package.xml  setup.py
src/misc/diagnostics/diagnostics/: health_monitor.py
src/misc/serial/: package.xml  setup.py
src/misc/serial/serial/: serial_bridge.py
src/misc/steward_description/: package.xml  setup.cfg  setup.py
src/misc/steward_description/launch/: description.launch.py
src/misc/steward_description/urdf/: steward.urdf.xacro
src/msg/proto_msgs/cpp/: .pb.h  Image.pb.h  Person.pb.h  proto.pb.h
src/msg/proto_msgs_old/: README.md
src/msg/proto_msgs_old/cpp/: .pb.cc  .pb.h  Image.pb.cc  Image.pb.h  Person.pb.cc  Person.pb.h  proto.pb.cc
src/msg/protobuf_msgs/: package.xml  setup.cfg  setup.py
src/msg/protobuf_msgs/protobuf_msgs/protos/sensor_msgs/: Image.proto
src/msg/protobuf_msgs/protobuf_msgs/protos/std_msgs/: Header.proto
src/msg/protobuf_msgs/protobuf_msgs/sensor_msgs/: Image_pb2.py  Image_pb2_grpc.py
src/msg/protobuf_msgs/protobuf_msgs/std_msgs/: Header_pb2.py  Header_pb2_grpc.py  helloworld_pb2_grpc.py
src/msg/steward_msgs/: CMakeLists.txt  package.xml
src/msg/steward_msgs/action/: CreateForestPlan.action  DriveToNextWaypoint.action
src/msg/steward_msgs/msg/: FailedChecks.msg  ForestPlan.msg  HealthCheck.msg  Mode.msg  PlantingPlan.msg  Route.msg  Seedling.msg  State.msg  SystemwideStatus.msg  TrajectoryCandidate.msg  TrajectoryCandidates.msg
src/msg/steward_msgs/srv/: GetGlobalHealth.srv  RequestState.srv  RequestTransition.srv
src/perception/camera_processing/: package.xml  setup.py
src/perception/camera_processing/camera_processing/: arborsim_cam_processor.py
src/perception/state_estimation/: package.xml  setup.py
src/planning/behavior/: package.xml  setup.py
src/planning/behavior/behavior/: fsm.py  plan_manager.py
src/planning/costmaps/: package.xml  setup.cfg  setup.py
src/planning/costmaps/costmaps/: cost_map_node.py  (+1 more)
src/planning/forest_planning/: package.xml  setup.cfg  setup.py
src/planning/route_generator/: CMakeLists.txt  package.xml
src/planning/route_planning/: package.xml  setup.cfg  setup.py
src/planning/route_planning/route_planning/: aco_route_planner.py  ant_colony.py  demo_waypoint_follower.py  route_planner.py
src/planning/trajectory_planning/: package.xml  setup.py
src/planning/trajectory_planning/trajectory_planning/: planner.py  twist_tester.py
src/planning/waypoint_management/: package.xml  setup.cfg  setup.py
src/planning/waypoint_management/waypoint_management/: waypoint_manager.py
src/proto_msgs/python/: Person_pb2.py
src/safety/health/: package.xml  setup.cfg  setup.py
src/safety/health/health/: monitor.py
src/tests/: package.xml  setup.py
src/tests/tests/: example_waypoints_publisher.py
(+43 files in other folders)
