<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tests</name>
  <version>1.0.0</version>
  <description>Nodes that perform unit and integration tests by publishing artificial data.</description>

  <maintainer email="w@heit.mn">Will Heitman</maintainer>
  <license>MIT</license>

  <depend>steward_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
