<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>route_planning</name>
  <version>1.0.0</version>
  <description>Nodes to generate global routes from Forest Plans for Arbor Robotics.</description>

  <maintainer email="w@heit.mn">Will Heitman</maintainer>
  <license>MIT</license>

  <depend>steward_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
